improve hero tea

--- a/products/tea.html
+++ b/products/tea.html
@@ -27,7 +27,7 @@
     
     <!-- Primary Meta Tags -->
     <title>Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter | TropicaFarm</title>
-    <meta name="description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers. Competitive FOB prices, ISO certified, sustainable sourcing.">
+    <meta name="description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers. Competitive FOB prices, ISO certified, sustainable sourcing.">
     <meta name="keywords" content="black tea wholesale indonesia, green tea wholesale indonesia, indonesian tea exporter, bulk tea supplier, wholesale tea manufacturer, tea export indonesia, black tea bulk, green tea bulk, indonesian tea supplier">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -42,7 +42,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="product">
     <meta property="og:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
-    <meta property="og:description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
+    <meta property="og:description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/black-tea-display.jpg">
     <meta property="og:url" content="https://tropicafarm.com/products/tea.html">
     <meta property="og:site_name" content="TropicaFarm">
@@ -54,7 +54,7 @@
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
     <meta name="twitter:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
-    <meta name="twitter:description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
+    <meta name="twitter:description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/black-tea-display.jpg">
 
     <!-- Additional Meta Tags -->
@@ -302,92 +302,54 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-tea flex items-center text-white pt-20">
-        <video autoplay muted loop playsinline>
-            <source src="/assets/videos/tea-harvesting.mp4" type="video/mp4">
-        </video>
-        <div class="container mx-auto px-6 py-12">
-            <div class="max-w-3xl">
-                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Two Decades of Excellence in Tea Production</h1>
-                <p class="text-lg mb-6 leading-relaxed">Trusted by global partners for consistently delivering Indonesian tea since 2004.</p>
-                <div class="flex flex-wrap gap-4">
-                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-8 py-3 rounded-xl transition duration-300 inline-flex items-center">
-                        <i class="fab fa-whatsapp text-xl font-bold mr-2"></i> Order Now
-                    </a>
-                </div>
-            </div>
+    <section class="hero-tea flex items-center text-white pt-20 bg-cover bg-center relative" style="background-image: url('/assets/images/java-tea-harvest.jpg'); min-height: 60vh;">
+      <div class="absolute inset-0 bg-black/10"></div>
+      <div class="container mx-auto px-6 py-20 relative z-10">
+        <div class="max-w-2xl">
+          <h1 class="text-5xl font-bold mb-6 leading-tight">
+            Reliable Black Tea & Green Tea Wholesale from Indonesia
+          </h1>
+          <p class="text-xl mb-8 leading-relaxed">
+            Exporting tea in bulk since 2014.
+          </p>
+          <div class="flex flex-wrap gap-4">
+            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-10 py-4 rounded-xl text-lg font-semibold bg-white text-green-700 border border-green-600 hover:bg-green-50 transition duration-300 flex items-center shadow-lg">
+              <i class="fab fa-whatsapp text-2xl mr-3"></i> Get Wholesale Quote
+            </a>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- About Tea Products -->
     <section class="py-20 bg-light">
         <div class="container mx-auto px-6">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-4xl font-bold text-primary mb-6 text-center">Our Tea Products</h2>
-                
-                <!-- Product Specifications -->
-                <div class="bg-white p-8 rounded-2xl shadow-lg mb-12">
-                    <div class="grid md:grid-cols-2 gap-8">
-                        <div>
-                            <h3 class="text-xl font-semibold mb-4 text-primary">Our Excellence</h3>
-                            <ul class="space-y-4">
-                                <li class="flex items-start">
-                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
-                                    <div>
-                                        <span class="font-medium">Natural & High Quality:</span>
-                                        <p class="text-gray-600">Premium Indonesian tea sourced from highland plantations</p>
-                                    </div>
-                                </li>
-                                <li class="flex items-start">
-                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
-                                    <div>
-                                        <span class="font-medium">Competitive Pricing:</span>
-                                        <p class="text-gray-600">Cost-effective solutions with sustainable supply chain</p>
-                                    </div>
-                                </li>
-                                <li class="flex items-start">
-                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
-                                    <div>
-                                        <span class="font-medium">Product Variety:</span>
-                                        <p class="text-gray-600">Wide range of tea types including black and green tea</p>
-                                    </div>
-                                </li>
-                                <li class="flex items-start">
-                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
-                                    <div>
-                                        <span class="font-medium">Flexible Packaging:</span>
-                                        <p class="text-gray-600">Customizable packaging solutions to meet buyer requirements</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-4 text-primary">Production Capacity</h3>
-                            <div class="space-y-4">
-                                <div class="p-4 bg-primary/5 rounded-lg">
-                                    <div class="flex justify-between items-center mb-2">
-                                        <span class="font-medium">Monthly Production</span>
-                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">150 tons</span>
-                                    </div>
-                                    <p class="text-gray-600 text-sm">Combined capacity for both tea varieties</p>
-                                </div>
-                                <div class="p-4 bg-primary/5 rounded-lg">
-                                    <div class="flex justify-between items-center mb-2">
-                                        <span class="font-medium">Minimum Order</span>
-                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">1 ton</span>
-                                    </div>
-                                    <p class="text-gray-600 text-sm">Standard packaging in 25kg bags</p>
-                                </div>
-                            </div>
-                        </div>
+            <div class="max-w-5xl mx-auto">
+                <h2 class="text-4xl font-bold text-primary mb-10 text-center">Why Choose TropicaFarm?</h2>
+                <div class="grid md:grid-cols-4 gap-8 mb-12">
+                    <div class="flex flex-col items-center text-center">
+                        <i class="fas fa-shield-alt text-4xl text-primary mb-4"></i>
+                        <h3 class="font-semibold text-lg mb-2">Certified Quality</h3>
+                        <p class="text-gray-600">ISO, HACCP, and Halal certified. Consistent, export-grade tea for global markets.</p>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <i class="fas fa-boxes text-4xl text-primary mb-4"></i>
+                        <h3 class="font-semibold text-lg mb-2">Flexible Packaging</h3>
+                        <p class="text-gray-600">Bulk tea in 40kg or 50kg kraft paper bags. Custom packaging and labeling available.</p>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <i class="fas fa-flask text-4xl text-primary mb-4"></i>
+                        <h3 class="font-semibold text-lg mb-2">Custom Blends</h3>
+                        <p class="text-gray-600">Tailored tea blends to match your market's taste and requirements.</p>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <i class="fas fa-industry text-4xl text-primary mb-4"></i>
+                        <h3 class="font-semibold text-lg mb-2">High Production Capacity</h3>
+                        <p class="text-gray-600">150 tons monthly (combined black & green tea) to support your bulk orders.</p>
                     </div>
                 </div>
-
-                <!-- Visual Showcase -->
-                <div class="grid md:grid-cols-3 gap-6">
-                    <img src="/assets/images/tea-harvesting.jpg" alt="Tea Harvesting" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="/assets/images/tea-sorting.jpg" alt="Tea Sorting" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="/assets/images/black-tea-preview.jpg" alt="Black Tea Preview" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                <div class="flex flex-wrap justify-center gap-8">
+                    <!-- Stat blocks removed as requested -->
                 </div>
             </div>
         </div>
@@ -402,7 +364,7 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="/assets/images/black-tea-display.jpg" alt="Premium Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/black-tea-display.jpg" alt="High-quality Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
                                 <img src="/assets/images/black-tea-close-up.jpg" alt="Black Tea Close Up" class="w-full h-[500px] object-cover">
@@ -618,7 +580,7 @@
                     <div class="flex flex-wrap gap-3 mb-8">
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Low Caffeine</span>
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Fresh Aroma</span>
-                        <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Premium Grade</span>
+                        <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">High-quality Grade</span>
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Bulk Supply</span>
                     </div>
 
@@ -735,7 +697,7 @@
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Specialty Tea</h2>
-                    <p class="text-gray-600 text-lg mb-8">Discover our premium specialty teas, each offering unique flavors and aromas. From the partially oxidized Oolong to the fragrant Jasmine and our signature Grey Dragon, experience the finest Indonesian tea craftsmanship.</p>
+                    <p class="text-gray-600 text-lg mb-8">Discover our reliable specialty teas, each offering unique flavors and aromas. From the partially oxidized Oolong to the fragrant Jasmine and our signature Grey Dragon, experience the finest Indonesian tea craftsmanship.</p>
 
                     <div class="grid grid-cols-2 gap-6 mb-8">
                         <div>
@@ -758,7 +720,7 @@
                     </div>
 
                     <div class="flex flex-wrap gap-3 mb-8">
-                        <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Premium Quality</span>
+                        <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Reliable Quality</span>
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Unique Flavors</span>
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Artisanal Process</span>
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Bulk Supply</span>
@@ -1028,7 +990,7 @@
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg">
                     <h3 class="text-xl font-semibold mb-3">Where are your tea plantations located?</h3>
-                    <p class="text-gray-600">Our tea plantations are located in the highlands of West Java, Indonesia, known for producing premium quality tea leaves.</p>
+                    <p class="text-gray-600">Our tea plantations are located in the highlands of West Java, Indonesia, known for producing high-quality tea leaves.</p>
                 </div>
             </div>
         </div>
@@ -1065,7 +1027,7 @@
         "name": "Where are your tea plantations located?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Our tea plantations are located in the highlands of West Java, Indonesia, known for producing premium quality tea leaves."
+          "text": "Our tea plantations are located in the highlands of West Java, Indonesia, known for producing high-quality tea leaves."
         }
       }]
     }
@@ -1344,7 +1306,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Black Tea & Green Tea Wholesale Indonesia",
-      "description": "Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.",
+      "description": "Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers.",
       "brand": {
         "@type": "Brand",
         "name": "TropicaFarm"
