--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
-    <title>TropicaFarm - Leading Indonesian Tea & Essential Oils Exporter | Black Tea, Green Tea, Nutmeg Oil, Patchouli Oil</title>
-    <meta name="description" content="TropicaFarm is Indonesia's established exporter of high-quality teas and essential oils. We offer Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced directly from sustainable Indonesian plantations. Certified products available for global markets.">
-    <meta name="keywords" content="Indonesian tea export, premium tea supplier, black tea wholesale, green tea export, nutmeg oil manufacturer, patchouli oil supplier, organic tea Indonesia, essential oils export, Indonesian agriculture products, sustainable farming">
+    <title>Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter | TropicaFarm</title>
+    <meta name="description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers. Competitive FOB prices, ISO certified, sustainable sourcing.">
+    <meta name="keywords" content="black tea wholesale indonesia, green tea wholesale indonesia, wholesale tea export, bulk tea supplier Indonesia, Indonesian tea manufacturer, tea export price, Java tea wholesale">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -31,8 +31,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TropicaFarm - Leading Indonesian Tea & Essential Oils Exporter">
-    <meta property="og:description" content="Indonesia's established exporter of high-quality teas and essential oils. Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil from sustainable plantations.">
+    <meta property="og:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
+    <meta property="og:description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
     <meta property="og:url" content="https://tropicafarm.com">
     <meta property="og:site_name" content="TropicaFarm">
@@ -43,8 +43,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
-    <meta name="twitter:title" content="TropicaFarm - Leading Indonesian Tea & Essential Oils">
-    <meta name="twitter:description" content="Discover high-quality Indonesian teas and essential oils from TropicaFarm. Direct from sustainable plantations to global markets.">
+    <meta name="twitter:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
+    <meta name="twitter:description" content="Reliable Indonesian wholesale tea supplier. High-quality black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/java-tea-harvest.jpg">
 
     <!-- Additional Meta Tags -->
@@ -166,7 +166,7 @@
       "name": "TropicaFarm",
       "url": "https://tropicafarm.com",
       "logo": "https://tropicafarm.com/assets/images/black-tea.jpg",
-      "description": "Leading Indonesian tea and essential oils exporter",
+      "description": "Leading Indonesian tea exporter",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "PT Global Tropica Farmindo",
@@ -200,7 +200,7 @@
       },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
-        "name": "High-Quality Tea and Essential Oils",
+        "name": "High-Quality Tea Products",
         "itemListElement": [
           {
             "@type": "Offer",
@@ -216,22 +216,6 @@
               "@type": "Product",
               "name": "Green Tea",
               "description": "High-quality Indonesian green tea with delicate flavor"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Product",
-              "name": "Nutmeg Oil",
-              "description": "Pure Indonesian nutmeg essential oil"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Product",
-              "name": "Patchouli Oil",
-              "description": "Leading Indonesian patchouli essential oil"
             }
           }
         ]
@@ -277,19 +261,21 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero h-screen flex items-center text-white pt-16">
-        <div class="container mx-auto px-4 text-center">
-            <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6 leading-tight">Leading Indonesian Tea & Essential Oils</h1>
-            <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">Discover our high-quality Black Tea, Green Tea, Nutmeg Oil, and Patchouli Oil sourced sustainably from Indonesian farms.</p>
-            <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="#contact" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-lg transition duration-300 font-medium flex items-center justify-center">
-                    <i class="fas fa-envelope mr-2"></i> Request a Quote
-                </a>
-                <a href="#products" class="bg-transparent hover:bg-white/20 border-2 border-white text-white px-8 py-3 rounded-lg transition duration-300 font-medium flex items-center justify-center">
-                    <i class="fas fa-box-open mr-2"></i> Explore Products
-                </a>
-            </div>
+    <section class="hero flex items-end text-white pt-20 bg-cover bg-center relative" style="background-image: url('/assets/images/java-tea-harvest.jpg'); min-height: 75vh;">
+      <div class="absolute inset-0 bg-black/10"></div>
+      <div class="w-full absolute left-0 bottom-0 z-10">
+        <div class="w-full bg-black/60 py-10 px-6 md:px-16 flex flex-col md:flex-row md:items-center md:justify-between">
+          <div class="text-left max-w-3xl">
+            <h1 class="text-2xl md:text-4xl font-bold mb-4 leading-tight" style="text-shadow:0 2px 8px rgba(0,0,0,0.18)">Black Tea & Green Tea Wholesale from Indonesia</h1>
+            <p class="text-base md:text-lg mb-0 leading-relaxed" style="text-shadow:0 2px 8px rgba(0,0,0,0.18)">Exporting black tea and green tea in bulk since 2014.</p>
+          </div>
+          <div class="mt-8 md:mt-0 md:ml-8 flex-shrink-0 flex justify-start md:justify-end w-full md:w-auto">
+            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-6 py-3 rounded-xl font-semibold bg-green-700 text-white border border-white hover:bg-green-800 transition duration-300 flex items-center shadow-lg whitespace-nowrap">
+              <i class="fab fa-whatsapp text-2xl mr-3"></i> Contact Us
+            </a>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- About Us Section -->
