--- a/products/tea.html
+++ b/products/tea.html
@@ -112,7 +112,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.1);
             z-index: 1;
         }
         .hero-tea .container {
@@ -307,10 +307,10 @@
       <div class="container mx-auto px-6 py-20 relative z-10">
         <div class="max-w-2xl">
           <h1 class="text-5xl font-bold mb-6 leading-tight">
-            Reliable Black Tea & Green Tea Wholesale from Indonesia
+            Black Tea & Green Tea Wholesale from Indonesia
           </h1>
           <p class="text-xl mb-8 leading-relaxed">
-            Exporting tea in bulk since 2014.
+            Exporting black tea and green tea in bulk since 2014.
           </p>
           <div class="flex flex-wrap gap-4">
             <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-10 py-4 rounded-xl text-lg font-semibold bg-white text-green-700 border border-green-600 hover:bg-green-50 transition duration-300 flex items-center shadow-lg">
