--- a/products/tea.html
+++ b/products/tea.html
@@ -313,8 +313,8 @@
             Exporting black tea and green tea in bulk since 2014.
           </p>
           <div class="flex flex-wrap gap-4">
-            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-10 py-4 rounded-xl text-lg font-semibold bg-white text-green-700 border border-green-600 hover:bg-green-50 transition duration-300 flex items-center shadow-lg">
-              <i class="fab fa-whatsapp text-2xl mr-3"></i> Get Wholesale Quote
+            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-10 py-4 rounded-xl text-lg font-semibold bg-primary text-white border-white hover:bg-accent transition duration-300 flex items-center shadow-lg">
+              <i class="fab fa-whatsapp text-2xl mr-3"></i> Contact Us
             </a>
           </div>
         </div>
