--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
     <section class="hero flex items-end text-white pt-20 bg-cover bg-center relative" style="background-image: url('/assets/images/java-tea-harvest.jpg'); min-height: 75vh;">
       <div class="absolute inset-0 bg-black/10"></div>
       <div class="w-full absolute left-0 bottom-0 z-10">
-        <div class="w-full bg-black/60 py-10 px-6 md:px-16 flex flex-col md:flex-row md:items-center md:justify-between">
+        <div class="w-full bg-black/60 md:py-10 py-4 px-6 md:px-16 flex flex-col md:flex-row md:items-center md:justify-between">
           <div class="text-left max-w-3xl">
-            <h1 class="text-2xl md:text-4xl font-bold mb-4 leading-tight" style="text-shadow:0 2px 8px rgba(0,0,0,0.18)">Black Tea & Green Tea Wholesale from Indonesia</h1>
+            <h1 class="text-2xl md:text-4xl font-bold mb-4 leading-tight" style="text-shadow:0 2px 8px rgba(0,0,0,0.18)">Tea Wholesale from Indonesia</h1>
             <p class="text-base md:text-lg mb-0 leading-relaxed" style="text-shadow:0 2px 8px rgba(0,0,0,0.18)">Exporting black tea and green tea in bulk since 2014.</p>
           </div>
           <div class="mt-8 md:mt-0 md:ml-8 flex-shrink-0 flex justify-start md:justify-end w-full md:w-auto">
@@ -279,7 +279,7 @@
     </section>
 
     <!-- About Us Section -->
-    <section id="about" class="py-28 bg-light relative overflow-hidden">
+    <section id="about" class="py-12 bg-light relative overflow-hidden">
         <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-16">
             <!-- Image & Badge -->
             <div class="md:w-1/2 relative flex justify-center">
@@ -290,37 +290,37 @@
                 </div>
             </div>
             <!-- Content -->
-            <div class="md:w-1/2 flex flex-col justify-center">
-                <h2 class="text-5xl font-bold text-primary mb-6">About Tropica Farm</h2>
-                <p class="text-gray-600 mb-6 text-lg leading-relaxed">
+            <div class="md:w-1/2 flex flex-col justify-center px-4 md:px-0">
+                <h2 class="text-4xl md:text-5xl font-bold text-primary mb-4 md:mb-6">About Tropica Farm</h2>
+                <p class="text-gray-600 mb-4 md:mb-6 text-base md:text-lg leading-relaxed">
                     Tropica Farm is a well-established Indonesian tea and essential oils producer with over two decades of experience. With our state-of-the-art facilities, we maintain impressive production capabilities:
                 </p>
                 <!-- Stats Row -->
-                <div class="flex gap-8 mb-8">
+                <div class="flex gap-4 md:gap-8 mb-6 md:mb-8">
                     <div class="text-center">
-                        <div class="text-4xl font-bold text-primary mb-1">150</div>
-                        <div class="text-gray-600">Tons of Tea<br><span class="text-sm text-gray-500">Per Month</span></div>
+                        <div class="text-3xl md:text-4xl font-bold text-primary mb-1">150</div>
+                        <div class="text-gray-600 text-sm md:text-base">Tons of Tea<br><span class="text-xs md:text-sm text-gray-500">Per Month</span></div>
                     </div>
                     <div class="text-center">
-                        <div class="text-4xl font-bold text-primary mb-1">20</div>
-                        <div class="text-gray-600">Tons of Essential Oils<br><span class="text-sm text-gray-500">Per Month</span></div>
+                        <div class="text-3xl md:text-4xl font-bold text-primary mb-1">20</div>
+                        <div class="text-gray-600 text-sm md:text-base">Tons of Essential Oils<br><span class="text-xs md:text-sm text-gray-500">Per Month</span></div>
                     </div>
                 </div>
                 <!-- Timeline / Milestones -->
-                <div class="mb-8">
-                    <ul class="flex flex-col md:flex-row gap-4 text-gray-700">
-                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>First Export 2014</li>
-                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>ISO Certified 2015</li>
-                        <li class="flex items-center"><span class="w-3 h-3 bg-primary rounded-full mr-2"></span>Global Reach 2020+</li>
+                <div class="mb-6 md:mb-8">
+                    <ul class="flex flex-col md:flex-row gap-3 md:gap-4 text-gray-700 text-sm md:text-base">
+                        <li class="flex items-center"><span class="w-2 h-2 md:w-3 md:h-3 bg-primary rounded-full mr-2"></span>First Export 2014</li>
+                        <li class="flex items-center"><span class="w-2 h-2 md:w-3 md:h-3 bg-primary rounded-full mr-2"></span>ISO Certified 2015</li>
+                        <li class="flex items-center"><span class="w-2 h-2 md:w-3 md:h-3 bg-primary rounded-full mr-2"></span>Global Reach 2020+</li>
                     </ul>
                 </div>
                 <!-- Quote -->
-                <blockquote class="italic text-primary border-l-4 border-primary pl-4 mb-8">
+                <blockquote class="italic text-primary border-l-4 border-primary pl-3 md:pl-4 mb-6 md:mb-8 text-sm md:text-base">
                     "Committed to quality and sustainability for over 20 years."
                 </blockquote>
                 <!-- CTA -->
-                <a href="#contact" class="inline-flex items-center bg-primary hover:bg-accent text-white px-8 py-3 rounded-lg transition font-medium w-max">
-                    Learn more about our capabilities <i class="fas fa-arrow-right ml-3"></i>
+                <a href="#contact" class="inline-flex items-center bg-primary hover:bg-accent text-white px-6 md:px-8 py-2 md:py-3 rounded-lg transition font-medium w-max text-sm md:text-base">
+                    Learn more about our capabilities <i class="fas fa-arrow-right ml-2 md:ml-3"></i>
                 </a>
             </div>
         </div>
@@ -329,10 +329,10 @@
     </section>
 
     <!-- Products Section -->
-    <section id="products" class="py-20">
+    <section id="products" class="py-12">
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold text-primary mb-4">Our High-Quality Products</h2>
+                <h2 class="text-4xl font-bold text-primary mb-4">Our Products</h2>
                 <p class="text-gray-600 max-w-3xl mx-auto text-lg">Discover our high-quality teas and essential oils, sourced from the finest plantations in Indonesia and processed with modern facilities under strict quality control.</p>
             </div>
             <div class="grid md:grid-cols-2 gap-12">
@@ -426,7 +426,7 @@
     </section>
 
     <!-- Statistics Section -->
-    <section id="stats" class="py-16 statistics-bg text-white">
+    <section id="stats" class="py-12 statistics-bg text-white">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
                 <div>
@@ -450,7 +450,7 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="py-20">
+    <section id="testimonials" class="py-12">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-primary mb-4">What Our Clients Say</h2>
@@ -524,7 +524,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-20 bg-light">
+    <section id="contact" class="py-12 bg-light">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row gap-12">
                 <div class="md:w-1/2">
