--- a/products/tea.html
+++ b/products/tea.html
@@ -304,17 +304,17 @@
     <!-- Hero Section -->
     <section class="hero-tea flex items-center text-white pt-20 bg-cover bg-center relative" style="background-image: url('/assets/images/java-tea-harvest.jpg'); min-height: 60vh;">
       <div class="absolute inset-0 bg-black/10"></div>
-      <div class="container mx-auto px-6 py-20 relative z-10">
+      <div class="container mx-auto px-6 py-0 md:py-10 relative z-10">
         <div class="max-w-2xl">
-          <h1 class="text-5xl font-bold mb-6 leading-tight">
-            Black Tea & Green Tea Wholesale from Indonesia
+          <h1 class="text-2xl md:text-4xl font-bold mb-6 leading-tight">
+            Tea Wholesale from Indonesia
           </h1>
           <p class="text-xl mb-8 leading-relaxed">
             Exporting black tea and green tea in bulk since 2014.
           </p>
           <div class="flex flex-wrap gap-4">
-            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-10 py-4 rounded-xl text-lg font-semibold bg-primary text-white border-white hover:bg-accent transition duration-300 flex items-center shadow-lg">
-              <i class="fab fa-whatsapp text-2xl mr-3"></i> Contact Us
+            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button px-6 py-3 rounded-xl font-semibold bg-green-700 text-white border border-white hover:bg-green-800 transition duration-300 flex items-center shadow-lg whitespace-nowrap">
+              <i class="fab fa-whatsapp text-xl mr-3"></i> Contact Us
             </a>
           </div>
         </div>
@@ -322,7 +322,7 @@
     </section>
 
     <!-- About Tea Products -->
-    <section class="py-20 bg-light">
+    <section class="py-12 bg-light">
         <div class="container mx-auto px-6">
             <div class="max-w-5xl mx-auto">
                 <h2 class="text-4xl font-bold text-primary mb-10 text-center">Why Choose TropicaFarm?</h2>
@@ -356,7 +356,7 @@
     </section>
 
     <!-- Black Tea Section -->
-    <section id="black-tea" class="py-20">
+    <section id="black-tea" class="py-12">
         <div class="container mx-auto px-6">
             <div class="flex flex-col lg:flex-row gap-12">
                 <!-- Image Gallery -->
@@ -532,7 +532,7 @@
     </div>
 
     <!-- Green Tea Section -->
-    <section id="green-tea" class="py-20 bg-light">
+    <section id="green-tea" class="py-12 bg-light">
         <div class="container mx-auto px-6">
             <div class="flex flex-col lg:flex-row gap-12">
                 <!-- Image Gallery -->
@@ -674,7 +674,7 @@
     </section>
 
     <!-- Specialty Tea Section -->
-    <section id="specialty-tea" class="py-20">
+    <section id="specialty-tea" class="py-12">
         <div class="container mx-auto px-6">
             <div class="flex flex-col lg:flex-row gap-12">
                 <!-- Image Gallery -->
@@ -954,7 +954,7 @@
     </section>
 
     <!-- Certificates Section -->
-    <section class="py-20 bg-light">
+    <section class="py-12 bg-light">
         <div class="container mx-auto px-6">
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold text-primary mb-6">Our Certifications</h2>
@@ -972,7 +972,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="py-20 bg-light">
+    <section class="py-12 bg-light">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-primary mb-8 text-center">Frequently Asked Questions</h2>
             <div class="max-w-4xl mx-auto space-y-6">
