--- a/products/tea.html
+++ b/products/tea.html
@@ -345,7 +345,7 @@
                     <div class="flex flex-col items-center text-center">
                         <i class="fas fa-industry text-4xl text-primary mb-4"></i>
                         <h3 class="font-semibold text-lg mb-2">High Production Capacity</h3>
-                        <p class="text-gray-600">150 tons monthly (combined black & green tea) to support your bulk orders.</p>
+                        <p class="text-gray-600">150 tons monthly to support your bulk orders.</p>
                     </div>
                 </div>
                 <div class="flex flex-wrap justify-center gap-8">
