--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <meta name="revisit-after" content="7 days">
     <meta name="language" content="English">
     <meta name="geo.region" content="ID">
-    <meta name="geo.placename" content="Purwakarta">
-    <meta name="geo.position" content="-6.5552;107.4431">
-    <meta name="ICBM" content="-6.5552, 107.4431">
+    <meta name="geo.placename" content="Bandung">
+    <meta name="geo.position" content="-6.9413006;107.6568965">
+    <meta name="ICBM" content="-6.9413006, 107.6568965">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -519,7 +519,6 @@
         function openYouTubeModal() {
             const modal = document.getElementById('youtubeModal');
             const iframe = document.getElementById('youtubeFrame');
-            // Replace VIDEO_ID with your actual YouTube video ID
             iframe.src = "https://www.youtube.com/embed/VIDEO_ID?autoplay=1";
             modal.classList.remove('hidden');
             modal.classList.add('flex');
