--- a/index.html
+++ b/index.html
@@ -430,12 +430,12 @@
             <!-- Left Content -->
             <div class="text-white space-y-5 h-full flex flex-col justify-end mb-8 md:mb-12">
                 <!-- Badge -->
-                 <div>
+                 <!-- <div>
                      <div class="inline-flex items-center gap-2 mb-2">
                          <div class="w-2 h-8 bg-yellow-400 rounded-full"></div>
                          <span class="text-yellow-400 text-sm font-medium">Exporting Tea since 2014</span>
                      </div>
-                 </div>
+                 </div> -->
                 
                 <!-- Main Heading -->
                 <div class="space-y-8">
