updat eimages how to order

--- a/index.html
+++ b/index.html
@@ -771,10 +771,10 @@
                             <img src="/assets/images/export-bulk-tea-indonesia.jpg" alt="Bulk Tea Export from Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
                         </div>
                         <div>
-                            <img src="/assets/images/warehouse-bandung.jpeg" alt="Tea Harvesting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
+                            <img src="/assets/images/warehouse-bandung.jpeg" alt="Warehouse Bandung" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
                         </div>
                         <div>
-                            <img src="/assets/images/container-loading-indonesia.jpg" alt="Tea Sorting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
+                            <img src="/assets/images/container-loading-indonesia.jpg" alt="Container Loading Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
                         </div>
                         <div class="col-span-2">
                             <img src="/assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)" loading="lazy">
