fix video media domain

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                     <div class="relative">
                         <div id="videoContainer1" class="relative">
                             <!-- Thumbnail with loading="lazy" -->
-                            <img id="thumbnail1" src="/assets/images/harvesting-thumbnail.jpg" alt="Tea Harvesting Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://tropicafarm.com/harvesting.mp4" onclick="playVideo('video1', 'thumbnail1', this)">
+                            <img id="thumbnail1" src="/assets/images/harvesting-thumbnail.jpg" alt="Tea Harvesting Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://media.tropicafarm.com/harvesting.mp4" onclick="playVideo('video1', 'thumbnail1', this)">
                             <!-- Play Button -->
                             <div id="playButton1" class="absolute inset-0 flex items-center justify-center bg-black/30 cursor-pointer" onclick="playVideo('video1', 'thumbnail1', this)">
                                 <div class="w-16 h-16 bg-white/90 rounded-full flex items-center justify-center">
@@ -949,7 +949,7 @@
                     <div class="relative">
                         <div id="videoContainer2" class="relative">
                             <!-- Thumbnail with loading="lazy" -->
-                            <img id="thumbnail2" src="/assets/images/tea-crushing-thumbnail.jpg" alt="Tea Crushing Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://tropicafarm.com/tea-crushing.mp4" onclick="playVideo('video2', 'thumbnail2', this)">
+                            <img id="thumbnail2" src="/assets/images/tea-crushing-thumbnail.jpg" alt="Tea Crushing Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://media.tropicafarm.com/tea-crushing.mp4" onclick="playVideo('video2', 'thumbnail2', this)">
                             <!-- Play Button -->
                             <div id="playButton2" class="absolute inset-0 flex items-center justify-center bg-black/30 cursor-pointer" onclick="playVideo('video2', 'thumbnail2', this)">
                                 <div class="w-16 h-16 bg-white/90 rounded-full flex items-center justify-center">
@@ -975,7 +975,7 @@
                     <div class="relative">
                         <div id="videoContainer3" class="relative">
                             <!-- Thumbnail with loading="lazy" -->
-                            <img id="thumbnail3" src="/assets/images/op-brew-thumbnail.jpg" alt="Tea brewing Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://tropicafarm.com/black tea op - brew.mov" onclick="playVideo('video3', 'thumbnail3', this)">
+                            <img id="thumbnail3" src="/assets/images/op-brew-thumbnail.jpg" alt="Tea brewing Process" class="w-full h-auto object-cover aspect-[202/364] cursor-pointer" loading="lazy" data-video-src="https://media.tropicafarm.com/black%20tea%20op%20-%20brew.mov" onclick="playVideo('video3', 'thumbnail3', this)">
                             <!-- Play Button -->
                             <div id="playButton3" class="absolute inset-0 flex items-center justify-center bg-black/30 cursor-pointer" onclick="playVideo('video3', 'thumbnail3', this)">
                                 <div class="w-16 h-16 bg-white/90 rounded-full flex items-center justify-center">
