--- a/products/tea.html
+++ b/products/tea.html
@@ -205,7 +205,7 @@
                 </div>
 
                 <!-- Chat Button -->
-                <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm" target="_blank" class="hidden md:flex bg-primary text-white px-6 py-3 rounded-full font-semibold hover:bg-primary/90 transition-all hover-scale flex items-center justify-center space-x-2">
+                <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm" target="_blank" class="hidden md:flex bg-primary text-white px-6 py-3 rounded-full font-semibold hover:bg-primary/90 transition-all flex items-center justify-center space-x-2">
                     <span>Chat With Us</span>
                     <div class="w-2 h-2 bg-yellow-400 rounded-full animate-pulse"></div>
                 </a>
@@ -222,23 +222,31 @@
                 <div class="relative h-80 rounded-2xl overflow-hidden mb-8">
                     <!-- Background Image -->
                     <div class="absolute inset-0 bg-gradient-to-r from-black/60 to-black/30">
-                        <img src="/assets/images/tea-premium.jpg" alt="Premium Tea Collection" class="w-full h-full object-cover">
+                        <img src="/assets/images/hero-product-list.jpg" alt="Premium Tea Collection" class="w-full h-full object-cover">
                     </div>
 
                     <!-- Content Overlay -->
                     <div class="relative z-10 h-full flex items-center">
                         <div class="container mx-auto px-6">
-                            <div class="max-w-3xl">
-                                <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">Our Recommended Tea</h1>
-                                <p class="text-white/90 text-lg md:text-xl mb-6">Perfectly crafted for your business needs</p>
+                            <div class="">
+                                <h1 class="text-2xl md:text-5xl font-bold text-white mb-2 md:mb-4">Our Recommended Tea</h1>
+                                <p class="text-white/90 text-lg md:text-xl mb-4 md:mb-6">Perfect for your business needs, offering an affordable supply</p>
 
                                 <!-- Free Samples CTA -->
-                                <div class="flex flex-col sm:flex-row items-start sm:items-center gap-4">
-                                    <p class="text-white/80 text-sm">Discover our hand-picked selection designed for global market demands</p>
-                                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20request%20tea%20samples" target="_blank" class="bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg font-medium transition duration-300 inline-flex items-center whitespace-nowrap">
-                                        <i class="fas fa-gift mr-2"></i> Request Free Samples
+                                <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-4">
+                                  <p class="hidden sm:block text-white/80 w-full sm:w-1/2">
+                                    Discover our hand-picked selection. It has passed our stringent quality qualifications, earning our personal recommendation and is designed for global market demands
+                                  </p>
+                                  <div class="w-full sm:w-1/2 flex sm:justify-end">
+                                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20request%20tea%20samples" 
+                                       target="_blank" 
+                                       class="bg-primary hover:bg-emerald-700 text-white px-6 py-3 rounded-lg font-medium transition duration-300 inline-flex items-center whitespace-nowrap">
+                                      <i class="fas fa-box-open mr-2"></i> Request Free Samples
                                     </a>
+                                  </div>
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
