white-tea updated content

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -235,7 +235,7 @@
 
                     <!-- Key Features -->
                     <div class="mb-8">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Key Features</h3>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-4">What Makes This Tea Special</h3>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
@@ -256,6 +256,10 @@
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
                                 <span class="text-gray-700">Lab tested for safety</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-2 h-2 bg-primary rounded-full"></div>
+                                <span class="text-gray-700">Preserves natural nutrients</span>
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
